# QtPack3r

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  README.md  VERSION.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmake/: GetVersion.cmake  PackageRelease.cmake  PrintVersion.cmake  SourceGroup.cmake  get_version.cmake
misc/: pack3r_release_api_response.json  qtpack3r_release_api_response.json
resources/: QtPack3r.qrc
resources/linux/: io.github.Aciz.QtPack3r.desktop
resources/win32/: QtPack3r.rc
scripts/: include-license.sh  release.sh
src/: dialog.cpp  dialog.h  filesystem.cpp  filesystem.h  main.cpp  mainwindow.cpp  mainwindow.h  pack3r_output_parser.cpp  pack3r_output_parser.h  pack3r_process_handler.cpp  pack3r_process_handler.h  preferences.cpp  preferences.h  qtpack3r_widget.cpp  qtpack3r_widget.h  qtpack3r_widget_connections.cpp  qtpack3r_widget_path_utils.cpp  qtpack3r_widget_ui.cpp  update_checker.cpp  update_checker.h
